# semantic-tag-increment

./: .codespell  .gitignore  .pre-commit-config.yaml  Makefile  README.md  REUSE.toml  action.yaml  pyproject.toml
.github/workflows/: build-test-release.yaml  build-test.yaml  codeql.yml  testing.yaml
src/semantic_tag_increment/: __init__.py  __main__.py  app_context.py  cli.py  cli_interface.py  config.py  exceptions.py  git_operations.py  github_actions.py  incrementer.py  io_operations.py  logging_config.py  main.py  modes.py  parser.py
tests/: test_cli.py  test_incrementer.py  test_integration.py  test_io_operations.py  test_logging_config.py  test_parser.py  test_performance_optimizations.py
tests/scripts/: performance_test.py
